--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /.classpath
 /.project
 /.settings
+frontend/.classpath
+frontend/.project
+frontend/.settings
+frontend/target
+repository/.classpath
+repository/.project
+repository/.settings
+repository/target
