--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.onehippo.cms7</groupId>
+        <artifactId>hippo-cms-perspectives</artifactId>
+        <version>${hippo.cms.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${lib.slf4j.version}</version>
