--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus</artifactId>
-    <version>0.2.3</version>
+    <version>0.2.4-SNAPSHOT</version>
   </parent>
 
   <name>Hippo CMS Extra Folder Context Menus Repository</name>
