--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /.classpath
 /.project
 /.settings
+common/.classpath
+common/.project
+common/.settings
+common/target
 frontend/.classpath
 frontend/.project
 frontend/.settings
