--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-/.classpath
-/.project
-/.settings
-common/.classpath
-common/.project
-common/.settings
-common/target
-frontend/.classpath
-frontend/.project
-frontend/.settings
-frontend/target
-repository/.classpath
-repository/.project
-repository/.settings
-repository/target
-/target
+.idea/
+*.iml
+target
+storage
