--- a/demo/cms/pom.xml
+++ b/demo/cms/pom.xml
@@ -11,7 +11,19 @@
   <packaging>war</packaging>
   <name>Hippo CMS Extra Folder Context Menus Demo CMS</name>
   <description>Hippo CMS Extra Folder Context Menus Demo CMS</description>
+
   <dependencies>
+
+    <dependency>
+      <groupId>org.onehippo.forge.folderctxmenus</groupId>
+      <artifactId>folderctxmenus-repository</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.onehippo.forge.folderctxmenus</groupId>
+      <artifactId>folderctxmenus-frontend</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.onehippo.cms7.hst.dependencies</groupId>
       <artifactId>hst-repository-dependencies</artifactId>
