--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -63,6 +63,8 @@
     <!--***START temporary override of versions*** -->
     <!-- ***END temporary override of versions*** -->
 
+    <forge.folderctxmenus.version>${project.version}</forge.folderctxmenus.version>
+
     <essentials.version>4.0.0</essentials.version>
     <jsp-api.version>2.2</jsp-api.version>
     <taglibs.version>1.2.1</taglibs.version>
@@ -85,7 +87,21 @@
   </repositories>
 
   <dependencyManagement>
+
     <dependencies>
+
+      <dependency>
+        <groupId>org.onehippo.forge.folderctxmenus</groupId>
+        <artifactId>folderctxmenus-repository</artifactId>
+        <version>${forge.folderctxmenus.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.onehippo.forge.folderctxmenus</groupId>
+        <artifactId>folderctxmenus-frontend</artifactId>
+        <version>${forge.folderctxmenus.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
         <artifactId>hippo-essentials-plugin-sdk-api</artifactId>
