--- a/repository/src/main/resources/hcm-config/configuration/workflows/threepane/folder/renderer/folder-move-menuitem.yaml
+++ b/repository/src/main/resources/hcm-config/configuration/workflows/threepane/folder/renderer/folder-move-menuitem.yaml
@@ -1,6 +1,6 @@
 definitions:
   config:
-    /hippo:configuration/hippo:workflows/threepane/folder/frontend:renderer/copyFolder:
+    /hippo:configuration/hippo:workflows/threepane/folder/frontend:renderer/moveFolder:
       jcr:primaryType: frontend:plugin
       plugin.class: org.onehippo.forge.folderctxmenus.cms.plugin.MoveFolderWorkflowMenuItemPlugin
       wicket.id: ${item}
