--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -12,7 +12,7 @@
   <description>Hippo CMS Extra Folder Context Menus Demo</description>
   <groupId>org.onehippo.forge.folderctxmenus</groupId>
   <artifactId>folderctxmenus-demo</artifactId>
-  <version>3.0.1-SNAPSHOT</version>
+  <version>3.0.1</version>
   <packaging>pom</packaging>
 
   <!-- 
