--- a/demo/repository-data/content/pom.xml
+++ b/demo/repository-data/content/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus-demo-repository-data</artifactId>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>3.0.1</version>
   </parent>
 
   <name>Hippo CMS Extra Folder Context Menus Demo Repository Data Content</name>
