--- a/demo/bootstrap/configuration/pom.xml
+++ b/demo/bootstrap/configuration/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus-demo-bootstrap</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
   </parent>
 
   <name>Hippo CMS Extra Folder Context Menus Demo Bootstrap Configuration</name>
