--- a/demo/bootstrap/webfiles/pom.xml
+++ b/demo/bootstrap/webfiles/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus-demo-bootstrap</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
   </parent>
   <artifactId>folderctxmenus-demo-bootstrap-webfiles</artifactId>
   <name>Hippo CMS Extra Folder Context Menus Demo Bootstrap Web Files</name>
