--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <description>Hippo CMS Extra Folder Context Menus</description>
   <groupId>org.onehippo.forge.folderctxmenus</groupId>
   <artifactId>folderctxmenus</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.1</version>
   <packaging>pom</packaging>
   <url>https://onehippo-forge.github.io/folder-context-menus</url>
 
