--- a/demo/essentials/pom.xml
+++ b/demo/essentials/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus-demo</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>folderctxmenus-demo-essentials</artifactId>
   <packaging>war</packaging>
