--- a/demo/cms/pom.xml
+++ b/demo/cms/pom.xml
@@ -9,8 +9,8 @@
   </parent>
   <artifactId>folderctxmenus-demo-cms</artifactId>
   <packaging>war</packaging>
-  <name>Hippo CMS Extra Folder Context Menus Demo CMS</name>
-  <description>Hippo CMS Extra Folder Context Menus Demo CMS</description>
+  <name>BloomReach XM Extra Folder Context Menus Demo CMS</name>
+  <description>BloomReach XM Extra Folder Context Menus Demo CMS</description>
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
