--- a/demo/repository-data/application/src/main/resources/hcm-content/content/documents/folderctxmenus-demo.yaml
+++ b/demo/repository-data/application/src/main/resources/hcm-content/content/documents/folderctxmenus-demo.yaml
@@ -3,7 +3,7 @@
   jcr:primaryType: hippostd:folder
   jcr:mixinTypes: ['hippo:named', 'hippotranslation:translated', 'mix:referenceable']
   jcr:uuid: 2acd2256-bc84-48fe-bb60-d84d19878dd3
-  hippo:name: Hippo CMS Extra Folder Context Menus Demo
+  hippo:name: BloomReach XM Extra Folder Context Menus Demo
   hippostd:foldertype: [new-translated-folder, new-document]
   hippotranslation:id: 996bcac5-86cf-49b5-a7a3-16a74863e814
   hippotranslation:locale: en
