--- a/demo/repository-data/site/src/main/resources/hcm-config/hst/configurations/folderctxmenus-demo/workspace/channel.yaml
+++ b/demo/repository-data/site/src/main/resources/hcm-config/hst/configurations/folderctxmenus-demo/workspace/channel.yaml
@@ -3,5 +3,5 @@ definitions:
     /hst:hst/hst:configurations/folderctxmenusdemo/hst:workspace/hst:channel:
       .meta:residual-child-node-category: content
       jcr:primaryType: hst:channel
-      hst:name: Hippo CMS Extra Folder Context Menus Demo
+      hst:name: BloomReach XM Extra Folder Context Menus Demo
       hst:type: website
