--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright 2015 Hippo
+  Copyright 2015-2019 Hippo
 
   Licensed under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with the
@@ -19,8 +19,8 @@
     <version>4.0.1-SNAPSHOT</version>
   </parent>
 
-  <name>Hippo CMS Extra Folder Context Menus Frontend</name>
-  <description>Hippo CMS Extra Folder Context Menus Frontend</description>
+  <name>BloomReach XM Extra Folder Context Menus Frontend</name>
+  <description>BloomReach XM Extra Folder Context Menus Frontend</description>
   <artifactId>folderctxmenus-frontend</artifactId>
 
   <dependencies>
