--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <name>Hippo CMS Extra Folder Context Menus</name>
-  <description>Hippo CMS Extra Folder Context Menus</description>
+  <name>BloomReach XM Extra Folder Context Menus</name>
+  <description>BloomReach XM Extra Folder Context Menus</description>
   <groupId>org.onehippo.forge.folderctxmenus</groupId>
   <artifactId>folderctxmenus</artifactId>
   <version>4.0.1-SNAPSHOT</version>
