--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus</artifactId>
-    <version>4.0.1</version>
+    <version>4.0.2-SNAPSHOT</version>
   </parent>
 
   <name>BloomReach XM Extra Folder Context Menus Common</name>
