--- a/common/pom.xml
+++ b/common/pom.xml
@@ -19,8 +19,8 @@
     <version>5.0.0-SNAPSHOT</version>
   </parent>
 
-  <name>BloomReach XM Extra Folder Context Menus Common</name>
-  <description>BloomReach XM Extra Folder Context Menus Common</description>
+  <name>Bloomreach XM Extra Folder Context Menus Common</name>
+  <description>Bloomreach XM Extra Folder Context Menus Common</description>
   <artifactId>folderctxmenus-common</artifactId>
 
   <dependencies>
