--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -8,8 +8,8 @@
     <version>14.0.0-2</version>
   </parent>
 
-  <name>BloomReach XM Extra Folder Context Menus Demo</name>
-  <description>BloomReach XM Extra Folder Context Menus Demo</description>
+  <name>Bloomreach XM Extra Folder Context Menus Demo</name>
+  <description>Bloomreach XM Extra Folder Context Menus Demo</description>
   <groupId>org.onehippo.forge.folderctxmenus</groupId>
   <artifactId>folderctxmenus-demo</artifactId>
   <version>5.0.0-SNAPSHOT</version>
