--- a/demo/repository-data/application/pom.xml
+++ b/demo/repository-data/application/pom.xml
@@ -8,8 +8,8 @@
     <version>5.0.0-SNAPSHOT</version>
   </parent>
 
-  <name>BloomReach XM Extra Folder Context Menus Demo Repository Data For Application</name>
-  <description>BloomReach XM Extra Folder Context Menus Demo Repository Data For Application</description>
+  <name>Bloomreach XM Extra Folder Context Menus Demo Repository Data For Application</name>
+  <description>Bloomreach XM Extra Folder Context Menus Demo Repository Data For Application</description>
   <artifactId>folderctxmenus-demo-repository-data-application</artifactId>
 
   <build>
