--- a/demo/repository-data/pom.xml
+++ b/demo/repository-data/pom.xml
@@ -8,8 +8,8 @@
     <version>5.0.0-SNAPSHOT</version>
   </parent>
 
-  <name>BloomReach XM Extra Folder Context Menus Demo Repository Data</name>
-  <description>BloomReach XM Extra Folder Context Menus Demo Repository Data</description>
+  <name>Bloomreach XM Extra Folder Context Menus Demo Repository Data</name>
+  <description>Bloomreach XM Extra Folder Context Menus Demo Repository Data</description>
   <artifactId>folderctxmenus-demo-repository-data</artifactId>
   <packaging>pom</packaging>
 
