--- a/demo/repository-data/site/pom.xml
+++ b/demo/repository-data/site/pom.xml
@@ -8,8 +8,8 @@
     <version>5.0.0-SNAPSHOT</version>
   </parent>
 
-  <name>BloomReach XM Extra Folder Context Menus Demo Repository Data For Site</name>
-  <description>BloomReach XM Extra Folder Context Menus Demo Repository Data For Site</description>
+  <name>Bloomreach XM Extra Folder Context Menus Demo Repository Data For Site</name>
+  <description>Bloomreach XM Extra Folder Context Menus Demo Repository Data For Site</description>
   <artifactId>folderctxmenus-demo-repository-data-site</artifactId>
 
   <build>
