--- a/demo/site/webapp/pom.xml
+++ b/demo/site/webapp/pom.xml
@@ -9,8 +9,8 @@
   </parent>
   <artifactId>folderctxmenus-demo-webapp</artifactId>
   <packaging>war</packaging>
-  <name>BloomReach XM Extra Folder Context Menus Demo Site Webapp</name>
-  <description>BloomReach XM Extra Folder Context Menus Demo Site Webapp</description>
+  <name>Bloomreach XM Extra Folder Context Menus Demo Site Webapp</name>
+  <description>Bloomreach XM Extra Folder Context Menus Demo Site Webapp</description>
 
   <dependencies>
     <dependency>
