HIPFORGE-336 rename 'folderctxmenus-extra' role + privilege to 'folderctxmenus-editor', because it sound more like a role.

--- a/repository/src/main/resources/hcm-config/configuration/domains/extra-folder-options.yaml
+++ b/repository/src/main/resources/hcm-config/configuration/domains/extra-folder-options.yaml
@@ -17,7 +17,7 @@ definitions:
           .meta:add-new-system-values: true
           type: string
           value: []
-        hipposys:role: folderctxmenus-extra
+        hipposys:role: folderctxmenus-editor
         hipposys:userrole: xm.content.admin
         hipposys:users:
           .meta:category: system
