--- a/demo/repository-data/application/src/main/resources/hcm-config/configuration/domains/folder-context-menus-demo-content.yaml
+++ b/demo/repository-data/application/src/main/resources/hcm-config/configuration/domains/folder-context-menus-demo-content.yaml
@@ -33,7 +33,7 @@ definitions:
           .meta:add-new-system-values: true
           type: string
           value: []
-        hipposys:role: folderctxmenus-extra
+        hipposys:role: folderctxmenus-editor
         hipposys:userrole: xm.content.editor
         hipposys:users:
           .meta:category: system
